publiv_rt.tf
resource "aws_route_table" "pub_rt" {
  vpc_id = aws_vpc.my_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.public_igw.id
  }

  tags = {
    Name = "pub_rt"
  }
}

resource "aws_route_table_association" "public_association" {
  subnet_id      = aws_subnet.public_sub.id
  route_table_id = aws_route_table.pub_rt.id
}

resource "aws_route_table_association" "public_association1" {
  subnet_id      = aws_subnet.public_sub2.id
  route_table_id = aws_route_table.pub_rt.id
}
